# acumatica-lint

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/acumatica_lint/: __init__.py  __main__.py  semantic_checks.py  validate.py
